[project]
name = "agentv2"
version = "0.0.1"
description = "The lastest refactor version of original QA-Agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "flagembedding>=1.3.5",
    "langchain>=1.2.0",
    "langchain-google-genai>=4.1.2",
    "llama-index>=0.14.12",
    "llama-index-embeddings-google>=0.4.1",
    "llama-index-embeddings-google-genai>=0.3.1",
    "llama-index-llms-gemini>=0.6.1",
    "llama-index-llms-google-genai>=0.8.3",
    "llama-index-postprocessor-cohere-rerank>=0.5.1",
    "llama-index-vector-stores-chroma>=0.5.5",
    "redis>=7.1.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = "."
